Вёрстка блока "Преимущества"

--- a/source/index.html
+++ b/source/index.html
@@ -146,21 +146,21 @@
           </div>
         </div>
       </section>
-      <section class="promo wrapper">
-        <div class="promo__about-container">
+      <section class="event wrapper">
+        <div class="event__about-container">
           <h2>SUPER GAMES</h2>
-          <dl class="promo__list">
-            <div class="promo__list-item">
-              <dt class="promo__list-term">Дата</dt>
-              <dd class="promo__list-detail">7<small class="promo__list-detail-reduce-text">Марта 2019</small></dd>
+          <dl class="event__list">
+            <div class="event__list-item">
+              <dt class="event__list-term">Дата</dt>
+              <dd class="event__list-detail">7<small class="event__list-detail-reduce-text">Марта 2019</small></dd>
             </div>
-            <div class="promo__list-item">
-              <dt class="promo__list-term">Время</dt>
-              <dd class="promo__list-detail">12:00</dd>
+            <div class="event__list-item">
+              <dt class="event__list-term">Время</dt>
+              <dd class="event__list-detail">12:00</dd>
             </div>
           </dl>
           <p>Ежегодные соревнования по CrossFit</p>
-          <a class="promo__button" href="#">Заполнить заявку</a>
+          <a class="event__button" href="#">Заполнить заявку</a>
         </div>
       </section>
       <section class="coaches">
@@ -283,27 +283,40 @@
       <section class="advantages">
         <h2>Наши преимущества</h2>
         <ul class="advantages__list">
-          <li class="advantages__list-item">
-            <h3>Площадь</h3>
-            <p>Занимайтесь без очередей и толпучки</p>
+          <li class="advantages__list-item advantages__list-item--square">
+            <div class="advantages__list-item-text-container">
+              <h3>Площадь</h3>
+              <p>Занимайтесь без очередей и толпучки</p>
+            </div>
           </li>
-          <li class="advantages__list-item">
-            <h3>Собственная парковка</h3>
-            <p>Вы всегда найдете место для своей машины на нашей парковке</p>
+          <li class="advantages__list-item advantages__list-item--parking">
+            <div class="advantages__list-item-text-container">
+              <h3>Собственная парковка</h3>
+              <p>Вы всегда найдете место для своей машины на нашей парковке</p>
+            </div>
           </li>
-          <li class="advantages__list-item">
-            <h3>100 <small>Тренажеров</small></h3>
-            <p>Современные тренажеры на все группы мышц</p>
+          <li class="advantages__list-item advantages__list-item--simulators">
+            <div class="advantages__list-item-text-container">
+              <h3><span class="advantages__simulators-big-text">100</span> Тренажеров</h3>
+              <p>Современные тренажеры на все группы мышц</p>
+            </div>
           </li>
-          <li class="advantages__list-item">
-            <h3>Комфорт</h3>
-            <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+          <li class="advantages__list-item advantages__list-item--comfort">
+            <div class="advantages__list-item-text-container">
+              <h3>Комфорт</h3>
+              <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+            </div>
           </li>
-          <li class="advantages__list-item">
-            <h3>Тренерский опыт</h3>
-            <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
+          <li class="advantages__list-item advantages__list-item--experience">
+            <div class="advantages__list-item-text-container">
+              <h3>Тренерский опыт</h3>
+              <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
+            </div>
           </li>
         </ul>
+      </section>
+      <section>
+
       </section>
     </main>
     <script src="js/vendor.min.js"></script>
